# CelluarAutomata

./: .gitignore  CMakeLists.txt  README.md
images/: CMakelists.txt
shaders/: Box.frag  Box.frag.spv  Box.vert  Box.vert.spv  CMakelists.txt
src/: CMakeLists.txt  main.cpp
src/Birth/: BirthActor.cpp  BirthActor.h  BirthCamera.cpp  BirthCamera.h  BirthWorld.cpp  BirthWorld.h
src/Birth2025/: Birth2025Camera.cpp  Birth2025Camera.h  Birth2025World.cpp  Birth2025World.h
src/Cauto/: BMLWorld.cpp  BMLWorld.h  CACamera.cpp  CACamera.h  CrossRoadWorld.cpp  CrossRoadWorld.h  LifeGame2DWorld.cpp  LifeGame2DWorld.h  LifeGame3DWorld.cpp  LifeGame3DWorld.h  NaSchWorld.cpp  NaSchWorld.h  RoadInstWorld.cpp  RoadInstWorld.h  TrafficLightWorld.cpp  TrafficLightWorld.h  Wolfram184World.cpp  Wolfram184World.h
src/Core/: Actor.cpp  Actor.h  Application.cpp  Application.h  Camera.cpp  Camera.h  CqdWindow.cpp  CqdWindow.h  InputSystem.cpp  InputSystem.h  Timer.h  World.cpp  World.h
src/Math/: MathLibrary.cpp  MathLibrary.h  Matrix4X4.cpp  Matrix4X4.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/Render/: CommandContext.cpp  CommandContext.h  GeometryManager.cpp  GeometryManager.h  PipelineManager.cpp  PipelineManager.h  RenderContext.cpp  RenderContext.h  RenderInterface.h  RenderUtil.h  RenderView.cpp  RenderView.h  ShaderManager.cpp  ShaderManager.h
src/Template/: Delegate.h  Singleton.h
